test/openshift/e2e/parallel/1-105_validate_default_argocd_route/02-update_tls.yaml
apiVersion: argoproj.io/v1alpha1
kind: ArgoCD
metadata:
  name: openshift-gitops
  namespace: openshift-gitops
spec:
  server:
    route:
      enabled: true
      tls:
        termination: passthrough
        insecureEdgeTerminationPolicy: None
