test/openshift/e2e/parallel/1-105_validate_default_argocd_route/01-assert.yaml
apiVersion: argoproj.io/v1alpha1
kind: ArgoCD
metadata:
  name: openshift-gitops
  namespace: openshift-gitops
spec:
  server:
    route:
      enabled: true  
status:
  phase: Available
---

# Verify if the argocd-server-tls secret is created by the OpenShift's service CA.
apiVersion: v1
kind: Secret
metadata:
  name: argocd-server-tls
  namespace: openshift-gitops
type: kubernetes.io/tls
---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: openshift-gitops-server
  namespace: openshift-gitops
spec:
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: openshift-gitops-server
    weight: 100
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
